# deep-search-portal

./: .env.example  .gitignore  README.md  requirements.txt
config/: docker-compose.langfuse.yml  docker-compose.librechat.yml  librechat-godmode.yaml  librechat-staging.yaml  librechat.yaml  litellm_config.yaml  searxng_settings_full.yml  searxng_settings_patch.yml  strands-logrotate.conf
docs/: DEPLOYMENT.md  TODO-model-management.md  architecture.md  (+5 more)
strands-agent/: .env.example  Makefile  advisor.py  agent.py  comprehension.py  config.py  conversation.py  knowledge_store.py  log_viewer.py  main.py  native_tools.py  prompts.py  pyproject.toml  strands_deep_agents.py  streaming.py  thought_refiner.py  tools.py
strands-agent/evals/: __init__.py  conftest.py  eval_collector.py  mock_model.py  test_agent_metrics.py  test_budget.py  test_conversation.py  test_domains.py  test_hooks_eval.py  test_integ_agent.py  test_integ_llm_judge.py  test_integ_thought_refiner.py  test_knowledge_plugin.py  test_knowledge_store.py  test_live_agent.py  test_log_viewer.py  test_plugin_integration.py  test_scorer.py  test_session_replay.py  test_stream_capture.py  test_streaming.py  test_thought_refiner.py  test_tool_audit.py  test_tool_display.py  test_tool_router.py  utils.py
strands-agent/plugins/: __init__.py  adaptive.py  budget.py  dedup.py  domains.py  knowledge.py  lineage.py  stream_capture.py  thought_refiner.py  tool_audit.py  tool_display.py  tool_router.py
strands-agent/skills/academic-research/: SKILL.md
strands-agent/skills/financial-research/: SKILL.md
strands-agent/skills/forum-mining/: SKILL.md
strands-agent/skills/government-data/: SKILL.md
strands-agent/skills/osint-censored-discovery/: SKILL.md
strands-agent/skills/preprint-pipeline/: SKILL.md
(+303 files in other folders)
